[gd_scene load_steps=5 format=3 uid="uid://b36a5ttthpgrn"]

[ext_resource type="Script" path="res://Main.gd" id="1_r66ky"]
[ext_resource type="PackedScene" uid="uid://m66oxihel8xi" path="res://mob.tscn" id="2_j2kiv"]
[ext_resource type="PackedScene" uid="uid://b7cnq7bv0pm5f" path="res://player.tscn" id="3_ebjie"]

[sub_resource type="Curve2D" id="Curve2D_rd044"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 21, 25, 0, 0, 0, 0, 449, 15, 0, 0, 0, 0, 15, 695, 0, 0, 0, 0, 410, 678, 0, 0, 0, 0, 282, 46, 0, 0, 0, 0, 21, 25, 0, 0, 0, 0, 122, 64, 0, 0, 0, 0, 21, 25, 0, 0, 0, 0, 90, -186, 0, 0, 0, 0, 134, -192, 0, 0, 0, 0, 172, -71, 0, 0, 0, 0, -353, 207, 0, 0, 0, 0, -14, -775, 0, 0, 0, 0, 454, 728, 0, 0, 0, 0, 938, 462, 0, 0, 0, 0, 1177, -29, 0, 0, 0, 0, -454, -35)
}
point_count = 17

[node name="Main" type="Node"]
script = ExtResource("1_r66ky")
mob_scene = ExtResource("2_j2kiv")

[node name="Player" parent="." instance=ExtResource("3_ebjie")]
position = Vector2(11, 11)

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_rd044")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2(21, 25)
rotation = -0.0233602

[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
